--- a/index1.html
+++ b/index1.html
@@ -210,24 +210,24 @@
         </div>
 
         <div class="category-box">
-            <h3>HWID</h3>
+            <h3>RAT</h3>
             <ul>
-                <li>HWID-Changer</li>
-                <li>HWID-Checker</li>
+                <li>Remote Access Trojan</li>
+                <li>https://github.com/H-zz-H69/Discord-RAT</li>
             </ul>
         </div>
 
         <div class="category-box">
-            <h3>Fun stuff</h3>
+            <h3>Discord Server</h3>
             <ul>
-                <li>Kahoot Bot</li>
+                <li>https://www.discord.com/invite/GBEBPNaDnZ</li>
             </ul>
         </div>
     </div>
 
     <footer>
         <h9>Top #1 Cheating Service</h9>
-        <p>&copy; 2024 H-zz-H Panel | <a href="users_expiration.json">Users Expirations</a> | <a href="loader_version.json">Current Version</a></p>
+        <p>&copy; 2024 H-zz-H | leck meine eier</p>
     </footer>
 
     <audio id="music" loop>
