--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H-zz-H Cheats</title>
+    <title>H-zz-H Software</title>
     <style>
         body {
             background-color: black; 
@@ -189,7 +189,7 @@
     </div>
 
     <div class="text">
-        Welcome to H-zz-H Cheats!
+        Welcome to H-zz-H Software!
     </div>
 
     <div class="category-container">
