--- a/index1.html
+++ b/index1.html
@@ -213,14 +213,14 @@
             <h3>RAT</h3>
             <ul>
                 <li>Remote Access Trojan</li>
-                <li>https://github.com/H-zz-H69/Discord-RAT</li>
+                <li><a href="https://github.com/H-zz-H69/Discord-RAT" target="_blank">https://github.com/H-zz-H69/Discord-RAT</a></li>
             </ul>
         </div>
 
         <div class="category-box">
             <h3>Discord Server</h3>
             <ul>
-                <li>https://www.discord.com/invite/GBEBPNaDnZ</li>
+                <li><a href="https://www.discord.com/invite/GBEBPNaDnZ" target="_blank">https://www.discord.com/invite/GBEBPNaDnZ</a></li>
             </ul>
         </div>
     </div>
