--- a/index1.html
+++ b/index1.html
@@ -179,6 +179,14 @@
             top: -50px; 
         }
 
+        a {
+            color: pink;
+        }
+        
+        a:hover {
+            color: hotpink;
+        }
+
     </style>
 </head>
 <body>
