--- a/index1.html
+++ b/index1.html
@@ -212,8 +212,8 @@
         <div class="category-box">
             <h3>Discord Tools</h3>
             <ul>
-                <li>Discord Webhook Spammer</li>
-                <li>Discord RPC faker</li>
+                <li>Website build in Spammer/Deleter</li>
+                <li><a href="index2.html" target="_blank">Click here to access!</a></li>
             </ul>
         </div>
 
