--- a/index2.html
+++ b/index2.html
@@ -246,7 +246,7 @@
       <h1>Webhook Spammer</h1>
       <input type="url" id="webhookurl" value="" placeholder="Enter webhook URL" />
       <input type="text" id="username" value="" placeholder="Enter username" />
-      <input type="url" id="avatar" value="https://i.pinimg.com/originals/7b/06/51/7b0651ae13f41c68cbd308a20d27caf8.jpg" placeholder="Avatar URL" />
+      <input type="url" id="avatar" value="https://i.ibb.co/RGLMJ20c/small.png" placeholder="Avatar URL" />
       <input type="text" id="message" value="" placeholder="Enter message" />
       <button id="spammerBtn" onclick="toggle()">Unlimited Spam: OFF</button>
       <h2 style="font-size: 16px; color: #ff1493; text-shadow: 0 0 5px rgba(255, 20, 147, 0.8);">
