--- a/index2.html
+++ b/index2.html
@@ -266,9 +266,8 @@
     <p id="infoText"></p>
   </div>
   
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-
     const facts = [
       "A webhook is like an automated messenger between apps!",
       "Ice bears are black underneath their white fur.",
