--- a/index1.html
+++ b/index1.html
@@ -204,8 +204,8 @@
         <div class="category-box">
             <h3>Cheats</h3>
             <ul>
-                <li>Counterstrike 2</li>
-                <li>Valorant</li>
+                <li><a href="https://github.com/H-zz-H69/cs2-base" target="_blank">Counter Strike 2</a></li>
+                <li><a href="https://github.com/H-zz-H69/cs2-injector" target="_blank">Manual Map Injector</a></li>
             </ul>
         </div>
 
