--- a/index1.html
+++ b/index1.html
@@ -231,6 +231,28 @@
                 <li><a href="https://www.discord.com/invite/GBEBPNaDnZ" target="_blank">https://www.discord.com/invite/GBEBPNaDnZ</a></li>
             </ul>
         </div>
+
+        <div class="category-box">
+            <h3>Kahoot Bot</h3>
+            <ul>
+                <li><a href="https://github.com/H-zz-H69/Kahoot-Botter-GUI" target="_blank">GUI Based Kahoot Bot</a></li>
+                <li><a href="https://github.com/H-zz-H69/Kahoot-Botter" target="_blank">Terminal Based Kahoot Bot</a></li>
+            </ul>
+        </div>
+
+        <div class="category-box">
+            <h3>Stealer</h3>
+            <ul>
+                <li><a href="https://github.com/H-zz-H69/redtiger-stealer" target="_blank">Cracked RedTiger Stealer</a></li>
+            </ul>
+        </div>
+
+        <div class="category-box">
+            <h3>Viewbot</h3>
+            <ul>
+                <li><a href="https://github.com/H-zz-H69/readme-viewbot" target="_blank">Github Readme Viewbot</a></li>
+            </ul>
+        </div>
     </div>
 
     <footer>
