--- a/index1.html
+++ b/index1.html
@@ -8,10 +8,10 @@
         body {
             background-color: black; 
             margin: 0;
-            height: 100vh;
+            height: 100vh; 
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: space-between; 
             align-items: center;
             overflow: hidden;
             animation: fadeInBackground 0.5s ease-out forwards;
@@ -100,10 +100,8 @@
             animation-delay: 3s;
             text-shadow: 0 0 5px rgba(255, 20, 147, 0.5), 0 0 10px rgba(255, 20, 147, 0.4), 0 0 15px rgba(255, 20, 147, 0.3);
         }
-
         footer {
-            position: absolute;
-            bottom: 20px;
+            position: relative;
             font-size: 14px;
             color: white;
             text-align: center;
@@ -111,6 +109,7 @@
             animation: fadeInText 1s ease-out forwards;
             animation-delay: 5s;
             text-shadow: 0 0 5px rgba(255, 20, 147, 0.5), 0 0 10px rgba(255, 20, 147, 0.4), 0 0 15px rgba(255, 20, 147, 0.3);
+            padding: 10px 0;
         }
 
         footer a {
@@ -165,18 +164,21 @@
 
         .category-container {
             display: flex;
-            justify-content: center;
             flex-wrap: wrap;
             gap: 20px;
             margin-top: 50px;
             opacity: 0;  
             animation: fadeInElements 1s ease-out forwards;
-            animation-delay: 6s; 
+            animation-delay: 6s;
+            max-height: calc(100vh - 200px); 
+            overflow-y: auto;
+            padding-right: 20px;
+            box-sizing: border-box;
         }
 
         .category-box {
-            position: relative;
-            top: -50px; 
+            flex: 1 1 30%;
+            box-sizing: border-box;
         }
 
         a {
