--- a/index1.html
+++ b/index1.html
@@ -224,6 +224,7 @@
             <ul>
                 <li>Remote Access Trojan</li>
                 <li><a href="https://github.com/H-zz-H69/Discord-RAT" target="_blank">https://github.com/H-zz-H69/Discord-RAT</a></li>
+                <li><a href="https://github.com/H-zz-H69/Nice-RAT" target="_blank">[Deleted] - NiceRAT</a></li>
             </ul>
         </div>
 
@@ -253,6 +254,20 @@
             <h3>Viewbot</h3>
             <ul>
                 <li><a href="https://github.com/H-zz-H69/readme-viewbot" target="_blank">Github Readme Viewbot</a></li>
+            </ul>
+        </div>
+
+        <div class="category-box">
+            <h3>Discord Verify</h3>
+            <ul>
+                <li><a href="https://github.com/H-zz-H69/Token-Verfiy" target="_blank">Verify and get Info on Tokens</a></li>
+            </ul>
+        </div>
+
+        <div class="category-box">
+            <h3>Other</h3>
+            <ul>
+                <li><a href="https://github.com/H-zz-H69/ChatGPT-prompt" target="_blank">ChatGPT Prompt</a></li>
             </ul>
         </div>
     </div>
